# rust-wasm-cpp-ffi

./: Cargo.toml  README.md  build.rs  libTest.cpp  package-lock.json  package.json  webpack.config.ts
src/: lib.rs
src/wasm_src/: Cargo.toml  build.rs
src/wasm_src/src/: lib.rs
src/wasm_src/src/cpp_src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  foolib.cpp  foolib.hpp  foolib.sln  foolib.vcxproj  foolib.vcxproj.filters
src/wasm_src/src/cpp_src/include/: foolib.h
src/wasm_src/src/cpp_src/src/: foolib.cpp
